fixed horizontal scrolling on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -188,7 +188,7 @@ input[type="text"]:not(:hover):not(:focus) {
     text-align: center;
 
     margin: 0;
-    padding: 4px;
+    padding: 4px 0px 4px 0px
 
     display: flex;
     flex-flow: row wrap;
